close #2 - Set titlebar to green if the answer is correct and red if it is incorrect.   Extracted out the tracking logic of the code

--- a/source/quiz.html
+++ b/source/quiz.html
@@ -79,6 +79,7 @@
 
 <!-- Quiz App application files  -->
 <script type="text/javascript" src="scripts/quizEngine.js"></script>
+<script type="text/javascript" src="scripts/quizTracker.js"></script>
 <script type="text/javascript" src="scripts/quizManager.js"></script>
 <script type="text/javascript"  id="questionImageTemplate">
     <div id="quizQuestionWithImage">
