Created separate modules for managing the progress circles, templates, and the dialog

--- a/source/quiz.html
+++ b/source/quiz.html
@@ -78,6 +78,9 @@
 <script type="text/javascript" src="scripts/config.js"></script>
 
 <!-- Quiz App application files  -->
+<script type="text/javascript" src="scripts/dialogManager.js"></script>
+<script type="text/javascript" src="scripts/progressCircleManager.js"></script>
+<script type="text/javascript" src="scripts/templateManager.js"></script>
 <script type="text/javascript" src="scripts/quizEngine.js"></script>
 <script type="text/javascript" src="scripts/quizTracker.js"></script>
 <script type="text/javascript" src="scripts/quizManager.js"></script>
